test_regress/t/t_tagged_case.out
%Warning-ASCRANGE: t/t_tagged_case.v:35:9: Ascending bit range vector: left < right of bit range: [0:31]
                                         : ... note: In instance 't'
   35 |     bit [0:31]    Word32LittleEndian;    
      |         ^
                   ... For warning description see https://verilator.org/warn/ASCRANGE?v=latest
                   ... Use "/* verilator lint_off ASCRANGE */" and lint_on around source to disable this message.
%Warning-WIDTHEXPAND: t/t_tagged_case.v:165:42: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'b' generates 8 bits.
                                              : ... note: In instance 't'
  165 |       tagged Byte8NonZeroLSB .b : result = b;
      |                                          ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Warning-WIDTHEXPAND: t/t_tagged_case.v:168:21: Operator NEQCASE expects 32 bits on the RHS, but RHS's CONST '8'ha5' generates 8 bits.
                                              : ... note: In instance 't'
  168 |     do if ((result) !== (8'hA5)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",168, (result), (8'hA5), "result", "8'hA5"); $stop; end while(0);;
      |                     ^~~
%Warning-WIDTHEXPAND: t/t_tagged_case.v:194:44: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 1 bits.
                                              : ... note: In instance 't'
  194 |       tagged Jmp (tagged JmpU .a) : result = a;
      |                                            ^
%Warning-WIDTHEXPAND: t/t_tagged_case.v:195:59: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                              : ... note: In instance 't'
  195 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                                           ^
%Error: t/t_tagged_case.v:180:21: PATTERN unexpected in assignment to unpacked array
  180 |     at = tagged Arr '{10, 20, 30, 40};
      |                     ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to 1 error(s), 5 warning(s)
